--- a/stats.html
+++ b/stats.html
@@ -258,7 +258,7 @@
 						<!-- Widget: doughnut Chart / End -->
 
 						<!-- Widget: Assists -->
-						<aside class="widget widget--sidebar card card--has-table widget-leaders aos-init aos-animate" data-aos="flip-up" data-aos-duration="1000">
+						<aside class="widget widget--sidebar card card--has-table widget-leaders aos-init aos-animate" data-aos="fade-left" data-aos-duration="1000">
 							<div class="widget__title card__header justify-content-center bg-light">
 								<h4>Top Assists</h4>
 							</div>
